Add open graph meta tags

--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <meta property="og:title" content="Sunnyside Landing Page">
+  <meta property="og:description" content="A landing page for an development agency using HTML and CSS. This is a mock project with minimal functionality">
+  <meta property="og:url" content="https://sunnyside-agency-red.vercel.app">
+  <meta property="og:image" content="/assets/images/desktop/image-header.jpg">
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   <link rel="preconnect" href="https://fonts.googleapis.com">
